5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1635_2703.log
== TEST (2019-04-08 14:26:47) 
-- CODE:
var= int(input())

if (var>18):
	mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"
	
preint(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    preint(mensagem)
NameError: name 'preint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:26:59) 
-- CODE:
var= int(input())

if (var>18):
	mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:27:05) 
-- CODE:
var= int(input())

if (var>18):
	mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.183076
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
